--- a/Todoey/Views/Base.lproj/Main.storyboard
+++ b/Todoey/Views/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Todoey-->
+        <!--Items-->
         <scene sceneID="HON-IM-H2S">
             <objects>
                 <tableViewController id="2ET-Vk-gl7" customClass="TodoListViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
@@ -39,7 +39,7 @@
                             <outlet property="delegate" destination="2ET-Vk-gl7" id="lgC-97-p7h"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="CJj-c7-Y0Q">
+                    <navigationItem key="navigationItem" title="Items" id="CJj-c7-Y0Q">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="4Ia-L7-sDx">
                             <connections>
                                 <action selector="addButtonPressed:" destination="2ET-Vk-gl7" id="oJB-T7-5PJ"/>
@@ -49,7 +49,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4kM-v0-TNr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1127.4809160305342" y="4.9295774647887329"/>
+            <point key="canvasLocation" x="1692" y="5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OU0-k8-dBH">
@@ -66,12 +66,50 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="2ET-Vk-gl7" kind="relationship" relationship="rootViewController" id="C9B-ul-R81"/>
+                        <segue destination="exS-7q-kVN" kind="relationship" relationship="rootViewController" id="kIv-JY-1OA"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eiQ-9i-q62" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="208" y="5"/>
+            <point key="canvasLocation" x="-48" y="5"/>
+        </scene>
+        <!--Todey-->
+        <scene sceneID="siJ-Sc-bC0">
+            <objects>
+                <tableViewController id="exS-7q-kVN" customClass="CategoryViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="qhu-JH-QCt">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="cnj-eu-P0Z">
+                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cnj-eu-P0Z" id="82T-aM-wSj">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="exS-7q-kVN" id="5fK-4d-3P5"/>
+                            <outlet property="delegate" destination="exS-7q-kVN" id="XeQ-IF-waM"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Todey" id="m9I-g1-FRY">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="C1d-xe-8uV">
+                            <connections>
+                                <action selector="addButtonPressed:" destination="exS-7q-kVN" id="GQB-gb-GtV"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="2ET-Vk-gl7" kind="show" identifier="goToItems" id="t3g-uT-SO0"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jXp-uT-ZlB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="775" y="5"/>
         </scene>
     </scenes>
     <resources>
